# static-BHP

./: README.md  setup.py
static_bhp/: README.md  license.txt  setup.cfg  static_bhp.py  sukkarcornelintegral.csv  sukkarcornellintegral2.csv
