[metadata]
name = "static_bhp_calculator"
version = 0.1.0
author = [
  { name="Betini Akarandut", email="betiniakarandut@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
description = README.md
url = "https://github.com/betiniakarandut/static_bhp"

